<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giftlistguru.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/headerBlue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/glglogo2" />

    </android.support.v7.widget.Toolbar>

    <Spinner
        android:id="@+id/recipientSpinner"
        android:layout_width="238dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:entries="@array/recipientList"
        app:layout_constraintStart_toEndOf="@+id/recipientLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipientLabel"
        android:layout_width="132dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:text="@string/recipientLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/giftButton"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:text="@string/giftButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <TextView
        android:id="@+id/dateList"
        android:layout_width="384dp"
        android:layout_height="296dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingLabel"
        android:background="@drawable/border"/>

    <TextView
        android:id="@+id/upcomingLabel"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/upcomingLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipientLabel" />

</android.support.constraint.ConstraintLayout>